# $Id: Makefile.am,v 1.14 2008/01/24 00:10:05 erg Exp $ $Revision: 1.14 $
## Process this file with automake to produce Makefile.in

SUBDIRS = cdt graph agraph gd pathplan agutil sfio vmalloc ast vpsc \
	circogen dotgen fdpgen neatogen twopigen common pack gvc \
	ingraphs expr cgraph utilities xdot gui filter topfish

EXTRA_DIST = Makefile.old
